# Fibrina

./: CMakeLists.txt  README.md  cokus3.cpp  lanciaMultiparametro.sh  lanciaNvolte.sh  lanciaNvolte_batch.sh  main.cpp
include/: RandUtils.h  TLattice.h  TParticle.h  TSite.h  matrix.h  small_uint_set.hpp  small_vector.hpp  tqdm.hpp
src/: RandUtils.cpp  TLattice.cpp  TParticle.cpp  TSite.cpp
